[project]
name = "es-callhome-cleaner"
version = "0.1.0"
description = "Cleaning and preparing the Spanish CallHome dataset for pretraining."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asitop>=0.0.24",
    "datasets>=5.0.0",
    "ipykernel>=7.3.0",
    "nltk>=3.9.4",
    "pandas>=3.0.3",
    "pylangacq>=0.23.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "transformers>=5.12.1",
]
